Bug 72007 - Sidebar: incorrect conflicting widget attachment causing graphic artifacts when the sidebar is docked on the left
Summary: Sidebar: incorrect conflicting widget attachment causing graphic artifacts wh...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.2.0.0.beta1
Hardware: x86-64 (AMD64) Linux (All)
: highest normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.0.0 target:4.4.4
Keywords:
: 77473 87419 89092 89625 89677 90305 91080 91674 92174 (view as bug list)
Depends on:
Blocks: Sidebar-UI-UX mab4.4
  Show dependency treegraph
 
Reported: 2013-11-25 21:29 UTC by Jean-Baptiste Faure
Modified: 2016-10-24 14:41 UTC (History)
16 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
screenshot showing the graphic artifact on the sidebar (161.37 KB, image/png)
2013-11-25 21:29 UTC, Jean-Baptiste Faure
Details
Another variation of this bug. 4.4.0.3, openSUSE 13.2. (68.20 KB, image/png)
2015-02-26 13:19 UTC, S.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Baptiste Faure 2013-11-25 21:29:39 UTC
Created attachment 89786 [details]
screenshot showing the graphic artifact on the sidebar

Please have a look at the attached screenshot.

From time to time the panel if the sidebar is misplaced and the button bar appears over it. Perhaps that is linked to the fact I am used to dock the sidebar on the left instead of on the right.

Best regards. JBF
Comment 1 Gerry 2013-11-26 17:18:01 UTC
I can confirm this on Ubuntu 13.04 Gnome3 with LO 4.2Beta1. This happens when the sidebar is put to the left side.

Hence, I set this bug to NEW
Comment 2 Gerry 2013-12-09 16:49:31 UTC
Problem confirmed also in LO 4.2 Beta2
Comment 3 sophie 2014-04-15 09:46:05 UTC
*** Bug 77473 has been marked as a duplicate of this bug. ***
Comment 4 catchall 2014-10-05 15:58:11 UTC
This bug is still present in LibreOffice 4.3.2.2.0+ on Debian Testing.

It happens when the sidebar is docked to the left. Originally, everything is fine, but various actions (like entering something in cell A1 of an empty spreadsheet) make it jump to the left so parts of it are hidden below the toolbar as shown in the screenshot attached to the original posting.

The display can be "fixed" by resizing the sidebar - it jumps to the correct position as soon as you start moving the resize handle - but it won't stay that way for long.

A Sidebar docked to the left side of the display is completely unusable due to this problem.
Comment 5 Abraham 2015-01-01 22:01:37 UTC
This bug is still present in Version: 4.3.4.1
Build ID: bc356b2f991740509f321d70e4512a6a54c5f243
My system: Windows 8.1 64-bit, Intel Core i5 3337U CPU, 4GB RAM.
Comment 6 Theo Hopman 2015-02-10 01:39:25 UTC
Still present in 4.4.0, Win 8.1
Comment 7 V Stuart Foote 2015-02-26 13:09:37 UTC
*** Bug 87419 has been marked as a duplicate of this bug. ***
Comment 8 V Stuart Foote 2015-02-26 13:09:58 UTC
*** Bug 89092 has been marked as a duplicate of this bug. ***
Comment 9 V Stuart Foote 2015-02-26 13:10:20 UTC
*** Bug 89625 has been marked as a duplicate of this bug. ***
Comment 10 V Stuart Foote 2015-02-26 13:10:41 UTC
*** Bug 89677 has been marked as a duplicate of this bug. ***
Comment 11 S. 2015-02-26 13:19:34 UTC
Created attachment 113709 [details]
Another variation of this bug.  4.4.0.3, openSUSE 13.2.
Comment 12 V Stuart Foote 2015-02-26 14:07:58 UTC
This has been with us since implementation of Sidebar as experimental feature in 4.1--where initially when docked left the Tab bar remained anchored to right edge of the Deck.  

For the 4.2 release, 
http://cgit.freedesktop.org/libreoffice/core/commit/?id=8965bfda9753568a038303d9935f7a451282a857

moved the Tab bar to left edge, but seems that it does not always force the Deck to attach to right edge of the Tab bar.  When focus shifts to another document and back, the redraw of the Sidebar--the Deck and Tab bar are both anchored to the same point, left-top.  A refresh (undock & dock) of the Sidebar corrects, but with navigation away from the document it reverts.

With MAB 4.2 closed--dropping this long present annoyance into MAB 4.4
Comment 13 Yousuf Philips (jay) (retired) 2015-04-25 14:16:39 UTC
This makes the sidebar quite unusable for RTL languages and i see that the gallery shows blank images in icon view.
Comment 14 Adolfo Jayme Barrientos 2015-05-05 05:56:38 UTC
*** Bug 91080 has been marked as a duplicate of this bug. ***
Comment 15 V Stuart Foote 2015-05-05 11:51:35 UTC
@Prashant, Caolán

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8965bfda9753568a038303d9935f7a451282a857 

I am not sure about this, but something in the sequence for attachment seems off 

In pseudo code aren't we doing...

1. identify attachement (WINDOWALIGN_RIGHT | WINDOWSALIGN_LEFT)
2. place the inner widget first (deck--check if visible)
3. place the outer (tab bar) forcing the initial to move inward

If so, it seems correct for right attached: deck (if visible) then tabbar. 

But seems reversed for left attached. Should it also be deck (if visible) then tabbar on that side as well?
Comment 16 Commit Notification 2015-05-07 13:39:27 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4073afa350387f9fc9194347ad78c6cbdabbb812

Resolves: tdf#72007: on switching decks keep our left indent, don't assume 0

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 17 Caolán McNamara 2015-05-07 13:40:49 UTC
Prashant's code seems fine, but there is another location in that file which needed adjustment along the same lines to keep the different indent. Reworked it all a bit while I was at it
Comment 18 V Stuart Foote 2015-05-08 16:31:30 UTC
(In reply to Caolán McNamara from comment #17)
> Prashant's code seems fine, but there is another location in that file which
> needed adjustment along the same lines to keep the different indent.
> Reworked it all a bit while I was at it

@Caolán, yes that has fixed issues when Sidebar is docked left. Thanks!

But, have an unintentional issue in the rework. When sidebar is undocked it now has the TabBar anchored to the left of the Deck, probably not incorrect but just feels a bit odd. 

Would there be some way to use the WINDOWALIGN_LEFT or RIGHT of its docked state to then set the tabbar attachement for when it is undocked?

Do you want a new BZ issue to keep things clean?
Comment 19 Gordo 2015-05-09 14:31:37 UTC
*** Bug 90305 has been marked as a duplicate of this bug. ***
Comment 20 Commit Notification 2015-05-09 19:37:32 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8b867887022903bc5788b01db51dfcec521dc878

Related: tdf#72007 align to right if undocked

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 21 Commit Notification 2015-05-12 13:31:12 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0be1277c5ad9f3ea2e8ff78c12431f8c512293cc&h=libreoffice-4-4

Resolves: tdf#72007: on switching decks keep our left indent, don't assume 0

It will be available in 4.4.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 22 water.qian 2015-05-13 23:38:31 UTC
Thanks. I tested 4.4 daily build on Windows and the bud has been fixed.
Comment 23 V Stuart Foote 2015-05-27 22:46:05 UTC
*** Bug 91674 has been marked as a duplicate of this bug. ***
Comment 24 Maxim Monastirsky 2015-06-19 09:24:11 UTC
*** Bug 92174 has been marked as a duplicate of this bug. ***