Resolves: tdf#72007: on switching decks keep our left indent, don't assume 0

Change-Id: I878c999611e1294d5107f1cf2c000d9ed5f88cb1
(cherry picked from commit 4073afa350387f9fc9194347ad78c6cbdabbb812)

Related: tdf#72007 align to right if undocked

Change-Id: Ia0af0493e0af6c945006e6a1f6f918f7b104068d
(cherry picked from commit 8b867887022903bc5788b01db51dfcec521dc878)
Reviewed-on: https://gerrit.libreoffice.org/15689
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Tested-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>